--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body>ter
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
